# graphrca

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/real_incidents/: README.md  manage.py
data/real_incidents/incident_001/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_002/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_003/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_004/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_005/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_006/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_007/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_008/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_009/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_010/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_011/: ground_truth.json  logs.txt  metadata.json  postmortem.md
data/real_incidents/incident_012/: ground_truth.json  logs.txt  metadata.json  postmortem.md
environment/: __init__.py  env.py  grader.py  models.py
environment/tasks/: task_easy.json  task_hard.json  task_medium.json
server/: app.py
(+929 files in other folders)
