[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graph-rca-pipeline-diagnoser"
version = "1.0.0"
description = "OpenEnv environment for diagnosing root causes in failing data pipelines"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.10.5",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
